# disk-manager

./: .gitignore  PUBLISH.md  README.md  diskman.spec  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish-pypi.yml
extras/docs/: diskman-detailed-guide.md
extras/packaging/aur/: .SRCINFO  PKGBUILD
extras/systemd/: diskman-automount.timer
packaging/aur/: .SRCINFO  PKGBUILD
scripts/: build_binary.sh  install_binary.sh  install_local_binary.sh  md_to_pdf.py  package_release_binary.sh  publish_pypi.sh
src/diskman/: cli.py  core.py  tui.py
systemd/: diskman-automount.service
