[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diskman"
version = "0.1.0"
description = "CLI + TUI disk/partition manager with automount excluding root"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "rich>=13.7.0",
]

[project.scripts]
diskman = "diskman.cli:main"

[project.optional-dependencies]
binary = [
  "pyinstaller>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
