[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diskman"
version = "0.2.0"
description = "CLI + TUI disk manager with SMART, LUKS, and non-blocking automount"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "rich>=13.7.0",
]

[project.scripts]
diskman = "diskman.cli:main"

[project.optional-dependencies]
binary = [
  "pyinstaller>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
