[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diskman"
version = "0.2.3"
description = "CLI + TUI disk/partition manager with SMART, LUKS, mount controls, and partition operations"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Gaffer"},
]
keywords = ["linux", "disk", "partition", "mount", "luks", "smart", "tui", "cli", "ntfs3", "parted", "resize"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=13.7.0",
]

[project.scripts]
diskman = "diskman.cli:main"

[project.optional-dependencies]
binary = [
  "pyinstaller>=6.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/gaffer/disk-manager"
Repository = "https://github.com/gaffer/disk-manager"
Issues = "https://github.com/gaffer/disk-manager/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
